added second body section

--- a/index.html
+++ b/index.html
@@ -69,5 +69,33 @@
                 </div>
             </div>
         </div>
+        <div class="body-container-second">
+          <div class="row">
+              <div class="col body-container-content-second"> 
+                  <h3><span class="body-container-title-second"> What is external wall insulation?
+                  </span></h3>
+                  If your home was built before the 1920s, it's likely the external walls are solid walls rather than cavity walls.
+                      <br>
+                      <br>
+                    <ul>
+                      <li>Solid walls have no gap, so they can’t be filled with cavity wall insulation.</li>
+                      <li>Cavity walls are made of two layers with a gap or ‘cavity’ between them.</li>
+                    </ul>
+                    <p>
+                      Solid walls can be insulated by adding an insulating layer, 
+                      either on the inside or the outside, to prevent heat escaping 
+                      through your walls while keeping the cold out.
+                    </p>
+                    <br>
+                    This will cost more than insulating a cavity wall but the savings 
+                    on your heating bills will be bigger too.
+                    <br>
+                    <button class="btn btn-secondary btn-second">Get external wall insulation</button>
+              </div>
+              <div class="col body-container-img">
+                  <img class="hero-img" src="images/house-2.png" >
+              </div>
+          </div>
+      </div>
 </body>
 </html>
