--- a/about.html
+++ b/about.html
@@ -217,7 +217,9 @@
 
 
       <div class="container">
-        <h2 class="section-3-heading">Solidwalls in the community
+        <h2 class="section-3-heading ">
+          Solidwalls in the community
+        
 
 
 
@@ -275,9 +277,9 @@
      <div class="container mt-5 ">
         <div class="jumbotron jumbotron-fluid connect-us">
             <div class="container">
-              <h1 class="display-4 bold">Connect With Us</h1>
+              <h1 class="display-4 bold connect-us-title">Connect With Us</h1>
               <p class="lead connect-content">For enquiries you can contact us in several different ways:
-                <ul>
+                <ul class="connect-list">
                     <li>
                         Home customers
                     </li>
