get quote added

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="#">Work with us <span class="sr-only">(current)</span></a>
             </li>
           </ul>
-            <a class="nav-link contact-us my-2 my-sm-0" href="#">Contact Us <span class="sr-only">(current)</span></a>
+          <a class="nav-link contact-us my-2 my-sm-0" href="/contact-us.html">Contact Us <span class="sr-only">(current)</span></a>
         </div>
       </nav>
       <div>
@@ -378,7 +378,7 @@
            </div>
                  </div>
        </div>
-             </footer>
+      </footer>
      <!--====-Copyright-====-->
      <section class="copyright">
                <div class="container">
@@ -391,6 +391,6 @@
            </div>
                  </div>
        </div>
-             </section>
+      </section>
 </body>
 </html>
