responsive two section from homepage

--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
                         There's a range of finishing options available, including modern render, pebble dash and brickwork.</p>
                         <br>
                 </div>
-                <div class="col body-container-img">
+                <div class=" body-container-img">
                   <img class="hero-img" src="images/house-2.png" >
                 </div>
             </div>
         </div>
+        
         <div class="body-container-second">
           <div class="row">
               <div class="col body-container-content-second"> 
@@ -133,7 +134,6 @@
             </div>
             <div class="col body-container-content-third"> 
                 <h3><span class="body-container-title-third"> How can I tell if I have a solid wall?
-
                 </span></h3>
                 Solid walls come in many different forms but there are some common ways to tell if your wall is solid or not:
                     <br>
