navbar contactus tab is responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="#">Work with us <span class="sr-only">(current)</span></a>
             </li>
           </ul>
-          <a class="nav-link contact-us my-2 my-sm-0" href="/contact-us.html">Contact Us <span class="sr-only">(current)</span></a>
+          <a class="nav-link contact-us my-1 my-sm-1 ml-5" href="/contact-us.html">Contact Us <span class="sr-only">(current)</span></a>
         </div>
       </nav>
       <div>
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="body-container-second">
           <div class="row">
               <div class="col body-container-content-second"> 
