--- a/about.html
+++ b/about.html
@@ -14,27 +14,27 @@
     <title>About Us | SolidWalls</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand logo" href="/">SolidWalls</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class=" collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto center-nav">
-            <li class="nav-item center-nav">
-              <a class="nav-link" href="#">Services <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item center-nav">
-                <a class="nav-link" href="/about.html">About Us <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item center-nav">
-                <a class="nav-link" href="#">Work with us <span class="sr-only">(current)</span></a>
-            </li>
-          </ul>
-          <a class="nav-link contact-us my-2 my-sm-0" href="/contact-us.html">Contact Us <span class="sr-only">(current)</span></a>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand logo" href="/">SolidWalls</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class=" collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto center-nav">
+        <li class="nav-item center-nav">
+          <a class="nav-link" href="#">Services <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item center-nav">
+            <a class="nav-link" href="/about.html">About Us <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item center-nav">
+            <a class="nav-link" href="#">Work with us <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+      <a class="nav-link contact-us my-1 my-sm-1 ml-5" href="/contact-us.html">Contact Us <span class="sr-only">(current)</span></a>
+    </div>
+  </nav>
       <div>
         <div class="jumbotron jumbotron-fluid " id="about-head" >
             <div class="about-head row">
