--- a/about.html
+++ b/about.html
@@ -26,13 +26,13 @@
           <a class="nav-link" href="#">Services <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item center-nav">
-            <a class="nav-link" href="/about.html">About Us <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="about.html">About Us <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item center-nav">
             <a class="nav-link" href="#">Work with us <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <a class="nav-link contact-us my-1 my-sm-1 ml-5" href="/contact-us.html">Contact Us <span class="sr-only">(current)</span></a>
+      <a class="nav-link contact-us my-1 my-sm-1 ml-5" href="contact-us.html">Contact Us <span class="sr-only">(current)</span></a>
     </div>
   </nav>
       <div>
